<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"

    tools:context=".Register">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="11dp"
                android:background="#fff"
                app:srcCompat="@drawable/niryat"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="25dp"
                android:paddingStart="20dp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageButton3"
                android:layout_marginTop="11dp"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="25dp"
                android:paddingStart="20dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/et_name"
                android:layout_below="@+id/et_name"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape"
                android:ems="10"
                android:entries="@array/country_arrays"
                android:padding="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="25dp"
                android:paddingStart="20dp"
                android:prompt="@string/country_prompt" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/spinner"
                android:layout_marginTop="18dp"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:padding="10dp"
                android:paddingLeft="20dp"
                android:paddingEnd="25dp"
                android:paddingStart="20dp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/et_mobile"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingLeft="20dp"
                android:paddingEnd="25dp"
                android:paddingStart="20dp" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/et_password"
                android:layout_marginTop="11dp"
                android:text="@string/male"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/radioButton"
                android:layout_alignBottom="@+id/radioButton"
                android:layout_centerHorizontal="true"
                android:text="@string/female"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/radioButton2"
                android:layout_alignEnd="@+id/et_mobile"
                android:text="@string/others"
                android:textSize="20sp" />

            <Button
                android:id="@+id/onRegister"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/radioButton2"
                android:layout_centerHorizontal="true"
                android:background="@drawable/buttonbg"
                android:onClick="onRegister"
                android:text="@string/create_new_account"
                android:textColor="#fff" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>